--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,8 @@ androidx-appcompat = "1.6.1"
 androidx-activityCompose = "1.8.0"
 compose-uitooling = "1.5.4"
 libres = "1.1.8"
-voyager = "1.0.0-rc07"
-composeImageLoader = "1.4.1"
+voyager = "1.0.0"
+composeImageLoader = "1.7.1"
 napier = "2.6.1"
 kotlinx-coroutines = "1.7.3"
 insetsx = "0.1.0-alpha07"
@@ -19,6 +19,7 @@ koinCompose = "1.0.4"
 sqlDelight = "2.0.0-alpha05"
 kermit = "2.0.0-RC4"
 moko-generator = "0.23.0"
+buildConfig = "4.1.1"
 
 [libraries]
 
@@ -59,3 +60,4 @@ compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
+buildConfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildConfig" }
