--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 
 kotlin = "1.9.21"
-agp = "8.2.1"
+agp = "8.2.2"
 compose = "1.5.11"
 androidx-appcompat = "1.6.1"
 androidx-activityCompose = "1.8.2"
@@ -20,7 +20,7 @@ multiplatformSettings = "1.1.1"
 koin = "3.4.3" # ios crash after update
 koinCompose = "1.0.4" # ios crash after update
 sqlDelight = "2.0.0-alpha05" # just crash
-kermit = "2.0.0-RC4"
+kermit = "2.0.2"
 
 [libraries]
 
