--- a/androidApp/src/androidMain/AndroidManifest.xml
+++ b/androidApp/src/androidMain/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="com.example.rocketnews.AndroidApp"
-        android:icon="@drawable/rocket_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="Rocket News"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity
